# CurveBug

./: .gitignore  CMakeLists.txt  README.md  Windows_Build.bat
.github/workflows/: build-linux.yml  build-macos.yml  build-release.yml  build-windows.yml  build.yml
src/: config.c  config.h  main.c  plotter.h  serial.c  serial.h
